[package]
name = "shredstream_lister"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "shredstream_lister"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
bytes = "1.8.0"
hex = "0.4.3"
itertools = "0.13.0"
libc = "0.2.164"
merkle = "1.11.0"
nix = "0.26.4"
prost = "0.13.3"
reed-solomon-erasure = "6.0.0"
rusqlite = "0.32.1"
solana-perf = "2.1.1"
solana-sdk = "2.1.1"
solana-streamer = "2.1.1"
tokio = "1.41.1"
tonic = "0.12.3"
